hello-lagom-kamon/deploy/ingress.yml
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: hello
spec:
  rules:
    - http:
        paths:
          - path: "/api/hello"
            backend:
              serviceName: hello
              servicePort: 80
          - path: "/direct-stream"
            backend:
              serviceName: "hello-stream"
              servicePort: 80
          - path: "/auto-stream"
            backend:
              serviceName: "hello-stream"
              servicePort: 80
          - path: "/kamon/hello"
            backend:
              serviceName: hello
              servicePort: 5266
          - path: "/prom/hello"
            backend:
              serviceName: hello
              servicePort: 9095
          - path: "/kamon/hello-stream"
            backend:
              serviceName: hello-stream
              servicePort: 5266
          - path: "/prom/hello-stream"
            backend:
              serviceName: "hello-stream"
              servicePort: 9095
